# fluvilog

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: compose.yaml
src/fluvilog/: __init__.py  __main__.py  catalogue.py  cli.py  config.py  constants.py  models.py  records.py  service.py  storage.py  wgmn.py
src/fluvilog/api/: __init__.py  app.py  schemas.py
tests/: conftest.py  test_api.py  test_base_deps.py  test_catalogue.py  test_cli.py  test_config.py  test_service.py  test_storage_reads.py  test_wgmn.py
