[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fluvilog"
version = "0.1.0"
description = "Near-real-time readings from Hamburg's water quality network (WGMN) via the public Wassergüte-Auskunft."
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31",
    "pandas>=2.2",
    "lxml>=5.0",
]

# Optional HTTP API tier. pydantic is declared explicitly — api.schemas imports
# it directly — even though fastapi would pull it in transitively.
[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2",
]

[project.scripts]
fluvilog = "fluvilog.cli:main"

[dependency-groups]
dev = [
    "pyright",
    "ruff",
    "pre-commit",
    "pandas-stubs",
    "types-requests",
    "lxml-stubs",
    "pytest",
    "httpx2",
]

[tool.setuptools.packages.find]
where = ["src"]

# Ruff is the single linter/formatter for this project (replaces flake8,
# pycodestyle and isort). Run `ruff check` and `ruff format`.
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["fluvilog"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
