[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "fluvilog"
version = "0.5.0"
description = "Near-real-time readings from Hamburg's water quality network (WGMN) via the public Wassergüte-Auskunft."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Dominique Fuchs", email = "df@0x9d.net" }]
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
keywords = ["hamburg", "water-quality", "wgmn", "environmental-data", "hydrology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "requests>=2.31",
    "pandas>=2.2",
    "lxml>=5.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2",
]

[project.scripts]
fluvilog = "fluvilog.cli:main"

[project.urls]
Repository = "https://github.com/dmnq-f/fluvilog"
Issues = "https://github.com/dmnq-f/fluvilog/issues"
Changelog = "https://github.com/dmnq-f/fluvilog/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pyright",
    "ruff",
    "pre-commit",
    "pandas-stubs",
    "types-requests",
    "lxml-stubs",
    "pytest",
    "httpx2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["fluvilog"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
